1.add a form for edit epsoide infomation 2.fix video upload button layout bug

--- a/sass/cms-component.sass
+++ b/sass/cms-component.sass
@@ -415,18 +415,75 @@ input,textarea
     line-height: 40px
     text-align: center
     border-radius: 4px
+    
 
     
     &:hover
         background-color: rgba(#fff,0.4)
     .title
         position: relative
-        &:before
-            content: ' '
-            background: url(../images/icon-upload.png) no-repeat 50% 50%
-            background-size: 70%
-            width: 48px
-            height: 42px
-            display: block
-            position: absolute
-            left: -50px
+        line-height: 40px
+        vertical-align: middle
+        img
+            vertical-align: middle
+            transform: scale(0.7)
+        // &:before
+        //     content: ' '
+        //     left: -50px
+        //     background: url(../images/icon-upload.png) no-repeat 50%
+        //     background-size: 50%
+        //     width: 48px
+        //     height: 42px
+        //     display: block
+        //     position: absolute
+             
+            
+
+//only for edit-episode-infomation
+.edit-episode-infomation
+    .overlay-h316-center
+        padding: 24px 10px 0px
+
+    .thumb-wrap
+        width: 25%
+        float: left
+        position: relative
+        box-shadow: 0 2px 10px rgba(0,0,0,0.3)
+
+        &:hover 
+            .thumb-hover-wrap
+                background-color: rgba(0, 0, 0, 0.6)
+                color: white
+        
+    .img-wrap
+        background-color: #fff
+        width: 100%
+        padding: 5px
+        box-sizing: border-box
+        img
+            width: 100%
+    .form-group
+        margin-bottom: 1em
+        padding-left: 0.5em
+    .form-wrap
+        width: 70%
+        float: left
+    .form-elements
+        margin-left: 1em
+        width: 100%
+        textarea,input[type="text"]
+            width: 100%
+    .form-label
+        padding-left: 1.2em
+        text-align: left
+    .thumb-hover-wrap 
+        font-size: 0.75rem
+        position: absolute
+        bottom: 0
+        width: 100%
+        height: 40px
+        line-height: 40px
+        color: transparent
+        background: transparent url("../images/baenner-upload.gif") no-repeat 8px 6px
+        transition: all 0.5s ease
+        
